--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ x-base_service: &base_service
     ports:
       - "7860:7860"
     volumes:
-      - &v1 ./data:/data
-      - &v2 ./output:/output
+      - &v1 ${WEBUI_DATA_PATH:-./data}:/data
+      - &v2 ${WEBUI_OUTPUT_PATH:-./output}:/output
     stop_signal: SIGINT
     deploy:
       resources:
