--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   auto: &automatic
     <<: *base_service
     profiles: ["auto"]
+    restart: unless-stopped
     build: ./services/AUTOMATIC1111
     image: sd-auto:49
     environment:
@@ -35,6 +36,7 @@ services:
   auto-cpu:
     <<: *automatic
     profiles: ["auto-cpu"]
+    restart: unless-stopped
     deploy: {}
     environment:
       - CLI_ARGS=--no-half --precision full --allow-code --enable-insecure-extension-access --api
@@ -42,6 +44,7 @@ services:
   invoke:
     <<: *base_service
     profiles: ["invoke"]
+    restart: unless-stopped
     build: ./services/invoke/
     image: sd-invoke:26
     environment:
@@ -52,6 +55,7 @@ services:
   sygil: &sygil
     <<: *base_service
     profiles: ["sygil"]
+    restart: unless-stopped
     build: ./services/sygil/
     image: sd-sygil:16
     environment:
@@ -61,5 +65,6 @@ services:
   sygil-sl:
     <<: *sygil
     profiles: ["sygil-sl"]
+    restart: unless-stopped
     environment:
       - USE_STREAMLIT=1
